@@ -303,11 +303,11 @@ align(
 #ifdef DEBUG_ALN_MATRIX
     std::vector<AlignState::index_t> dumpStates {AlignState::MATCH, AlignState::DELETE, AlignState::INSERT, AlignState::JUMP};
     this->dumpTables(queryBegin, queryEnd,
-            ref1Begin, ref1End,
-            ref2Begin, ref2End,
-            querySize,
-            _ptrMat1, _ptrMat2,
-            dumpStates,storeScores);
+                     ref1Begin, ref1End,
+                     ref2Begin, ref2End,
+                     querySize,
+                     _ptrMat1, _ptrMat2,
+                     dumpStates,storeScores);
 #endif
 
     this->backTraceAlignment(
