@@ -1,3 +1,4 @@
+- MANTA-253 improve alignment corner cases and debugging features
 v0.27.1
 - [#6] Fix assertion caused by filtered graph edges on bin boundaries.
 - [#5] Improve robustness to filesystem delay (update ot pyflow v1.1.7)
